crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_text__basic_v_text.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<div v-text=\"msg\"></div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div><div></div></div>`)
}
