crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_text__v_text_with_other_attrs.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<div id=\"foo\" v-text=\"msg\"></div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div><div id="foo"></div></div>`)
}
